docs: updated swaggerui
